github_data_collector/src/data/issue_comment/buttercoin_buttercoin.txt
This file has been edited by a Computer Science student in a Technical Writing course. The students are tasked in finding online real-world documentation to edit. Full marks are achieved if the original author of the work accepts the changes; in this case a Pull Request.
Please review and accept the Pull Request and thank you so much!
As a previous member of this development project who was removed without any prior notice. I would love to see an explanation as to why we were all removed.

That coupled with the 23.01259287 BTC currently being held for this project. Which amounts to $ 13,692.49 which I can only see as being stolen by the remaining single developer.

Whilst the money is not an issue, it was designed to pay back the developers for their time and effort. However no remuneration was ever made to developers kicked from the project without any notice.

An explanation would be nice.

When i type npm run gives the following:

> bin/dev-standalone

17:57:28.331 - INFO - ProcessingChainEntrance - Starting PCE
17:57:28.353 - INFO - ProcessingChainEntrance - INITIALIZED/REPLAYED LOG
17:57:28.354 - INFO - WebsocketListener - LISTENING
17:57:28.371 - INFO - ProcessingChainEntrance - Starting PCE
17:57:28.388 - INFO - ProcessingChainEntrance - INITIALIZED/REPLAYED LOG
17:57:28.388 - INFO - EngineWebsocketSlave - CONNECT UPSTREAM
17:57:28.389 - INFO - SlaveProtocol - STARTING PROTOCOL
17:57:28.389 - INFO - Initiator - Connection #0 - STARTING TO CONNECT: ws://localhost:6150
17:57:28.402 - INFO - WebsocketListener - Connection #1 - handle_open
17:57:28.403 - INFO - EngineProtocol - STARTING PROTOCOL
17:57:28.404 - INFO - Initiator - Connection #0 - handle_open
17:57:28.405 - INFO - EngineWebsocketSlave - CONNECTED
17:57:28.405 - INFO - Initiator - Connection #0 - ONCEOPEN
17:57:28.408 - INFO - EngineProtocol - TAKING PCE SNAPSHOT
17:57:28.409 - INFO - EngineProtocol - SNAPSHOT DONE
1
17:57:28.410 - INFO - SlaveProtocol - SLAVE GOT SNAPSHOT_RESULT
17:57:28.410 - INFO - EngineWebsocketSlave - SLAVE GOT SNAPSHOT
17:57:28.410 - INFO - ProcessingChainEntrance - PCE LOADING SNAPSHOT
17:57:28.411 - INFO - ProcessingChainEntrance - PCE LOADED SNAPSHOT. EXPECTING SERIAL 0
17:57:28.411 - INFO - ProcessingChainEntrance - PCE DUMPING SNAPSHOT
17:57:28.412 - INFO - ProcessingChainEntrance - DONE DUMPING SNAPSHOT
17:57:28.413 - INFO - EngineWebsocketSlave - SLAVE INITIALIZING DOWNSTREAM LISTENER
17:57:28.413 - INFO - WebsocketListener - LISTENING
17:57:28.413 - INFO - EngineWebsocketSlave - QUERY SERVER LISTENING { port: 6151 }
17:57:28.415 - INFO - EngineWebsocketSlave - SLAVE BOOT COMPLETE

When i open localhost:6150 gives "Not implemented", how do i run the application?

It would be nice to have an overview doc of port/ip setting files.

I currently have a hard time to find the correct NODE and NPM versions per OS.

It would be nice if this where mentioned in the docs.

Step by step how to install it  ? How do I do.

Hello,
I have tried to deploy Buttercoin on Debian and starting from npm test, I am seeing the following issues. What I would like to know is whether it is worth the time to look at the code myself and try to figure it out. (I have very little experience with node.js).
There is nothing on localhost:3000. I tried localhost:3001, localhost:3002, localhost:6151 and 6152 which has the sign "not implemented".
Thanks a lot!
Zarni

buttercoin@0.0.3 test /root/buttercoin
sh test.sh
/root/buttercoin/test/test_helper.coffee:1
xports, require, module, __filename, __dirname) { global.chai = require 'chai'
^^^^^^
SyntaxError: Unexpected string
at Module.compile (module.js:439:25)
at Object.Module.extensions..js (module.js:474:10)
at Module.load (module.js:356:32)
at Function.Module.load (module.js:312:12)
at Module.require (module.js:364:17)
at require (module.js:380:17)
at files (/root/buttercoin/nodemodules/mocha/bin/mocha:271:3)
at Array.forEach (native)
at Object. (/root/buttercoin/nodemodules/mocha/bin/mocha:270:10)
at Module.compile (module.js:456:26)
at Object.Module.extensions..js (module.js:474:10)
at Module.load (module.js:356:32)
at Function.Module.load (module.js:312:12)
at Function.Module.runMain (module.js:497:10)
at startup (node.js:119:16)
at node.js:902:3 

how to start the front? and the server?

It looks like a working build of buttercoin for ubuntu 13.10 should be available, but I'm getting the same errors as everyone else:

> buttercoin@0.0.3 start /home/ubuntu/buttercoin
> bin/dev-standalone

npm ERR! buttercoin@0.0.3 start: `bin/dev-standalone`
npm ERR! `sh "-c" "bin/dev-standalone"` failed with 1
npm ERR!
npm ERR! Failed at the buttercoin@0.0.3 start script.
npm ERR! This is most likely a problem with the buttercoin package,
npm ERR! not with npm itself.
npm ERR! Tell the author that this fails on your system:
npm ERR!     bin/dev-standalone
npm ERR! You can get their info via:
npm ERR!     npm owner ls buttercoin
npm ERR! There is likely additional logging output above.

npm ERR! System Linux 3.11.0-12-generic
npm ERR! command "/usr/bin/nodejs" "/usr/bin/npm" "start"
npm ERR! cwd /home/ubuntu/buttercoin
npm ERR! node -v v0.10.15
npm ERR! npm -v 1.2.18
npm ERR! code ELIFECYCLE
npm WARN This failure might be due to the use of legacy binary "node"
npm WARN For further explanations, please read
/usr/share/doc/nodejs/README.Debian

Can anyone please help to resolve this?

Thank you!

Running `npm start` gives the following output:

```
10:15:15.395 - INFO - ProcessingChainEntrance - Starting PCE
10:15:15.408 - INFO - ProcessingChainEntrance - Bumping serial to: 0
10:15:15.411 - INFO - ProcessingChainEntrance - FORWARDING 5
10:15:15.412 - INFO - ProcessingChainEntrance - INITIALIZED/REPLAYED LOG
10:15:15.413 - INFO - WebsocketListener - LISTENING
10:15:15.416 - INFO - ProcessingChainEntrance - Starting PCE
10:15:15.419 - INFO - ProcessingChainEntrance - PCE LOADING SNAPSHOT
10:15:15.419 - INFO - ProcessingChainEntrance - PCE LOADED SNAPSHOT. EXPECTING SERIAL 1
10:15:15.419 - INFO - ProcessingChainEntrance - INITIALIZED/REPLAYED LOG
10:15:15.420 - INFO - EngineWebsocketSlave - CONNECT UPSTREAM
10:15:15.421 - INFO - SlaveProtocol - STARTING PROTOCOL
10:15:15.421 - INFO - Initiator - Connection #0 - STARTING TO CONNECT: ws://localhost:6150
10:15:15.437 - INFO - WebsocketListener - Connection #1 - handle_open
10:15:15.438 - INFO - EngineProtocol - STARTING PROTOCOL
10:15:15.441 - INFO - Initiator - Connection #0 - handle_open
10:15:15.442 - INFO - EngineWebsocketSlave - CONNECTED
10:15:15.442 - INFO - Initiator - Connection #0 - ONCEOPEN
10:15:15.447 - INFO - EngineProtocol - TAKING PCE SNAPSHOT
10:15:15.447 - INFO - EngineProtocol - SNAPSHOT DONE
1
10:15:15.449 - INFO - SlaveProtocol - SLAVE GOT SNAPSHOT_RESULT
10:15:15.450 - INFO - EngineWebsocketSlave - SLAVE GOT SNAPSHOT
10:15:15.450 - INFO - ProcessingChainEntrance - PCE LOADING SNAPSHOT
10:15:15.450 - INFO - ProcessingChainEntrance - PCE LOADED SNAPSHOT. EXPECTING SERIAL 1
10:15:15.450 - INFO - ProcessingChainEntrance - PCE DUMPING SNAPSHOT
10:15:15.452 - INFO - ProcessingChainEntrance - DONE DUMPING SNAPSHOT
10:15:15.452 - INFO - EngineWebsocketSlave - SLAVE INITIALIZING DOWNSTREAM LISTENER
10:15:15.453 - INFO - WebsocketListener - LISTENING
10:15:15.454 - INFO - EngineWebsocketSlave - QUERY SERVER LISTENING { port: 6151 }
10:15:15.460 - INFO - EngineWebsocketSlave - SLAVE BOOT COMPLETE
```
